# backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
.metals/: metals.lock.db  metals.mv.db
db/: Dockerfile  converter.py  docker-compose.yml  init-script.sh  waifu-converter.py
db/data/: postmaster.pid
db/data/base/1/: pg_internal.init
db/data/base/16384/: 1259  24578_fsm  24578_vm  24584  2604  2608  2619  2657  2658  2659  2662  2665  2666  2673  2674  2704  2841  pg_internal.init
db/data/base/5/: pg_internal.init
db/data/global/: 1260  1262  2671  pg_control  pg_internal.init
db/data/pg_xact/: 0000
mysite/: .gitignore
mysite/higher_lower/: apps.py  urls.py  views.py
mysite/mysite/: settings.py  urls.py
src/db/: init-script.sh  score-converter.py  waifu-converter.py
src/db/data/: postmaster.pid
src/db/data/base/16384/: 1247  1249  2224  24577  24578  24583  2579  2606  2610  2656  2663  2664  2667  2678  2679  2696  2703  2840  2840_fsm  3455  5002  pg_internal.init
src/db/data/base/5/: pg_internal.init
src/db/data/global/: 1260  pg_control  pg_internal.init
src/db/query/: SELECT table_name FROM information_schem.pgsql
src/mysite/: db.sqlite3
test/: test_db.py
