[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Suphawit <suphawit.won@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-cors-headers = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
