[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Suphawit <suphawit.won@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-cors-headers = "^3.14.0"
pre-commit = "^3.0.1"
flake8-annotations = "^2.9.1"
flake8-eradicate = "^1.4.0"
flake8 = "^5.0.1"
cursor = "^1.3.5"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
